--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -369,7 +369,7 @@
     <string name="bean_grinder_reset">重置</string>
     <string name="bean_grinder_rear_test">后方研磨测试</string>
     <string name="bean_grinder_front_test">前方研磨测试</string>
-    <string name="bean_grinder_finer">细</string>
-    <string name="bean_grinder_coarser">粗</string>
+    <string name="bean_grinder_finer">调细</string>
+    <string name="bean_grinder_coarser">调粗</string>
 
 </resources>
