--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -372,4 +372,27 @@
     <string name="bean_grinder_finer">调细</string>
     <string name="bean_grinder_coarser">调粗</string>
 
+    <string name="machine_test_coffee_inputs">咖啡系统输入</string>
+    <string name="machine_test_coffee_output">咖啡系统输出</string>
+    <string name="machine_test_steam_inputs">蒸汽系统输入</string>
+    <string name="machine_test_steam_output">蒸汽系统输出</string>
+    <string name="machine_test_motor_test">电机测试</string>
+    <string name="machine_test_input_test_coffee">输入测试 - 咖啡系统</string>
+    <string name="machine_test_input_test_steam">输入测试 - 蒸汽系统</string>
+    <string name="machine_test_output_test_coffee">输出测试 - 咖啡系统</string>
+    <string name="machine_test_output_test_steam">输出测试 - 蒸汽系统</string>
+    <string name="machine_test_micro_switch_left">Micro Switch Grinder Left: </string>
+    <string name="machine_test_micro_switch_right">Micro Switch Grinder Right: </string>
+    <string name="machine_test_bean_hopper_rear">后方豆缸: </string>
+    <string name="machine_test_bean_hopper_front">前方豆缸: </string>
+    <string name="machine_test_grounds_drawer">粉渣盒: </string>
+    <string name="machine_test_line_pressure_switch">Line Pressure Switch: </string>
+    <string name="machine_test_water_pressure">水压: </string>
+    <string name="machine_test_boiler_temperature_left">左侧咖啡锅炉温度: </string>
+    <string name="machine_test_boiler_temperature_right">右侧咖啡锅炉温度: </string>
+    <string name="machine_test_flow_rate_left">左侧流量计: </string>
+    <string name="machine_test_flow_rate_right">右侧流量计: </string>
+    <string name="machine_test_present">存在</string>
+    <string name="machine_test_missing">缺失</string>
+
 </resources>
