--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -381,12 +381,12 @@
     <string name="machine_test_input_test_steam">输入测试 - 蒸汽系统</string>
     <string name="machine_test_output_test_coffee">输出测试 - 咖啡系统</string>
     <string name="machine_test_output_test_steam">输出测试 - 蒸汽系统</string>
-    <string name="machine_test_micro_switch_left">Micro Switch Grinder Left: </string>
-    <string name="machine_test_micro_switch_right">Micro Switch Grinder Right: </string>
+    <string name="machine_test_micro_switch_left">左边刀盘监测器: </string>
+    <string name="machine_test_micro_switch_right">右边刀盘监测器: </string>
     <string name="machine_test_bean_hopper_rear">后方豆缸: </string>
     <string name="machine_test_bean_hopper_front">前方豆缸: </string>
     <string name="machine_test_grounds_drawer">粉渣盒: </string>
-    <string name="machine_test_line_pressure_switch">Line Pressure Switch: </string>
+    <string name="machine_test_line_pressure_switch">水路压力开关: </string>
     <string name="machine_test_water_pressure">水压: </string>
     <string name="machine_test_boiler_temperature_left">左侧咖啡锅炉温度: </string>
     <string name="machine_test_boiler_temperature_right">右侧咖啡锅炉温度: </string>
@@ -394,5 +394,10 @@
     <string name="machine_test_flow_rate_right">右侧流量计: </string>
     <string name="machine_test_present">存在</string>
     <string name="machine_test_missing">缺失</string>
+    <string name="machine_test_steam_pressure">蒸汽锅炉压力: </string>
+    <string name="machine_test_security_level">蒸汽锅炉安全水位: </string>
+    <string name="machine_test_work_level">蒸汽锅炉操作水位: </string>
+    <string name="machine_test_left_wand_temp">左边蒸汽棒温度: </string>
+    <string name="machine_test_right_wand_temp">右边蒸汽棒温度: </string>
 
 </resources>
