--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -381,10 +381,10 @@
     <string name="bean_grinder_finer">Finer</string>
     <string name="bean_grinder_coarser">Coarser</string>
 
-    <string name="machine_test_coffee_inputs">Coffee Inputs</string>
-    <string name="machine_test_coffee_output">Coffee Outputs</string>
-    <string name="machine_test_steam_inputs">Steam Inputs</string>
-    <string name="machine_test_steam_output">Steam Outputs</string>
+    <string name="machine_test_coffee_inputs">Coffee Inputs Test</string>
+    <string name="machine_test_coffee_output">Coffee Outputs Test</string>
+    <string name="machine_test_steam_inputs">Steam Inputs Test</string>
+    <string name="machine_test_steam_output">Steam Outputs Test</string>
     <string name="machine_test_motor_test">Motor Test</string>
     <string name="machine_test_input_test_coffee">Input Test - Coffee</string>
     <string name="machine_test_input_test_steam">Input Test - Steam</string>
