添加储存还原页面

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -437,5 +437,56 @@
     <string name="machine_test_so_efoam_valve1">EFoam1号阀</string>
     <string name="info_coffee_status">咖啡状态</string>
     <string name="info_steam_status">蒸汽状态</string>
+    <string name="maintenance_milk_test_left">左边牛奶感应器测试</string>
+    <string name="maintenance_software_update">软件更新</string>
+    <string name="maintenance_reset_settings">还原设置</string>
+    <string name="maintenance_remote_update">远程更新</string>
+    <string name="maintenance_save_all_data">保存所有数据</string>
+    <string name="maintenance_restore_settings">U盘还原设置</string>
+    <string name="maintenance_service_param">维修保养设置</string>
+    <string name="maintenance_water_filter">过滤器</string>
+    <string name="maintenance_service_functions">维修功能</string>
+    <string name="maintenance_test_functions">测试功能</string>
+    <string name="maintenance_save_restore">储存&amp;还原</string>
+    <string name="maintenance_manuals">说明指引</string>
+    <string name="maintenance_count_cups">按杯数计算</string>
+    <string name="maintenance_count_schedule">按周期计算</string>
+    <string name="maintenance_countdown_point">维修保养杯数剩余:</string>
+    <string name="maintenance_left_brew_unit">左侧杯数:</string>
+    <string name="maintenance_right_brew_unit">右侧杯数:</string>
+    <string name="maintenance_next_time">下次维修保养日期:</string>
+    <string name="maintenance_products">[杯]</string>
+    <string name="maintenance_confirm_reset_count">确认重置保养计数?</string>
+    <string name="maintenance_filter_guide">过滤器使用说明</string>
+    <string name="maintenance_using_filters">使用过滤器</string>
+    <string name="maintenance_steam_boiler_secure_level">蒸汽锅炉安全水位:</string>
+    <string name="maintenance_steam_boiler_work_level">蒸汽锅炉操作水位:</string>
+    <string name="maintenance_steam_boiler_pressure">蒸汽锅炉压力:</string>
+    <string name="maintenance_empty_coffee_boiler">清空咖啡锅炉</string>
+    <string name="maintenance_water_pump_pressure_check">水泵压力检查</string>
+    <string name="maintenance_reduce_steam_boiler_pressure">蒸汽锅炉减压</string>
+    <string name="maintenance_empty_steam_boiler">清空蒸汽锅炉</string>
+    <string name="maintenance_steam_boiler_pressure_test">蒸汽锅炉压力过大测试</string>
+    <string name="maintenance_front_rinse">分水网冲水</string>
+    <string name="maintenance_flow_rate_rinse">流量计冲水</string>
+    <string name="maintenance_grinder_test">刀盘传感器测试</string>
+    <string name="maintenance_flow_rate_test">流量计测试</string>
+    <string name="maintenance_ball_dispenser_test">洗机丸槽测试</string>
+    <string name="maintenance_milk_test_right">右边牛奶感应器测试</string>
+    <string name="info_sn_machine">机器序列号</string>
+    <string name="info_cpu">主板</string>
+    <string name="info_sn">序列号</string>
+    <string name="info_board">主板型号</string>
+    <string name="info_ext_board_id">主板拓展ID</string>
+    <string name="info_ext_board_sn">主板拓展序列号</string>
+    <string name="info_cpu_feature">主板功能</string>
+    <string name="info_display">显示</string>
+    <string name="info_status_valve_brew_left">左侧研磨阀:</string>
+    <string name="info_status_value_brew_right">右侧研磨阀:</string>
+    <string name="info_status_valve_bypass_left">左侧分水阀:</string>
+    <string name="info_status_valve_bypass_right">右侧分水阀:</string>
+    <string name="info_status_fan_front">前方风扇:</string>
+    <string name="info_status_fan_left">左侧风扇:</string>
+    <string name="info_status_fan_right">右侧风扇:</string>
 
 </resources>
