--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -364,7 +364,7 @@
     <string name="bean_grinding_capacity_hopper_front">前方豆缸研磨容量</string>
     <string name="bean_extraction_time_control_rear">后方豆缸萃取时间监测系统</string>
     <string name="bean_extraction_time_control_front">前方豆缸萃取时间监测系统</string>
-    <string name="bean_levelling">布粉</string>
+    <string name="bean_levelling">电子布粉</string>
     <string name="bean_grinder_adjustment">研磨调整</string>
     <string name="bean_grinder_reset">重置</string>
     <string name="bean_grinder_rear_test">后方研磨测试</string>
